# openvr-virtual-driver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
ai_vr/: driver.vrdrivermanifest
ai_vr/resources/settings/: default.vrsettings
client/: pyproject.toml
client/examples/simple/: main.py
client/src/: __init__.py
demo/: main.py  pyproject.toml
examples/simple/: README.md  main.py
openvr_virtual_driver/: driver.vrdrivermanifest
openvr_virtual_driver/resources/input/: ovd_controller_profile.json
openvr_virtual_driver/resources/settings/: default.vrsettings
src/: controller_device_driver.cpp  controller_device_driver.h  device_provider.cpp  device_provider.h  hmd_device_driver.cpp  hmd_device_driver.h  hmd_driver_factory.cpp  socket_manager.cpp  socket_manager.h  tracker_device_driver.cpp  tracker_device_driver.h
src/controller/: controller_device_driver.cpp  controller_device_driver.h
src/hmd/: hmd_device_driver.cpp  hmd_device_driver.h
src/mpsc/: channel.h
src/provider/: device_provider.cpp  device_provider.h
src/socket/: socket_manager.cpp  socket_manager.h
src/tracker/: tracker_device_driver.cpp  tracker_device_driver.h
